--- a/src/RedisNaruto/RedisNaruto.csproj
+++ b/src/RedisNaruto/RedisNaruto.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="7.0.0" />
       <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="$(RecyclableMemoryStreamVersion)" />
     </ItemGroup>
 
