--- a/src/RedisNaruto/RedisNaruto.csproj
+++ b/src/RedisNaruto/RedisNaruto.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="$(RecyclableMemoryStreamVersion)" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Internal\Attributes\" />
+    </ItemGroup>
+
 </Project>
