--- a/src/RedisNaruto/RedisNaruto.csproj
+++ b/src/RedisNaruto/RedisNaruto.csproj
@@ -9,12 +9,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="7.0.0" />
-      <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="$(RecyclableMemoryStreamVersion)" />
+        <PackageReference Include="System.IO.Pipelines" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="7.0.0" />
+        <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="$(RecyclableMemoryStreamVersion)" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Internal\Attributes\" />
+        <Folder Include="Internal\Attributes\" />
     </ItemGroup>
 
 </Project>
