--- a/test/BenchmarkTest/BenchmarkTest.csproj
+++ b/test/BenchmarkTest/BenchmarkTest.csproj
@@ -13,6 +13,9 @@
 
     <ItemGroup>
       <PackageReference Include="BenchmarkDotNet" Version="0.13.2" />
+      <PackageReference Include="FreeRedis" Version="1.0.10" />
+      <PackageReference Include="NewLife.Redis" Version="5.3.2023.512" />
+      <PackageReference Include="StackExchange.Redis" Version="2.6.111" />
     </ItemGroup>
 
 </Project>
