--- a/test/TestProject1/TestProject1.csproj
+++ b/test/TestProject1/TestProject1.csproj
@@ -9,7 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FreeRedis" Version="1.0.10" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+        <PackageReference Include="StackExchange.Redis" Version="2.6.111" />
         <PackageReference Include="System.IO.Pipelines" Version="7.0.0" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
