--- a/test/test.aspnetcpre/test.aspnetcpre.csproj
+++ b/test/test.aspnetcpre/test.aspnetcpre.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DiagnosticAdapter" Version="3.1.32" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
         <PackageReference Include="StackExchange.Redis" Version="2.6.111" />
     </ItemGroup>
