--- a/test/test.aspnetcpre/test.aspnetcpre.csproj
+++ b/test/test.aspnetcpre/test.aspnetcpre.csproj
@@ -1,15 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
+<!--        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />-->
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0-preview.4.24260.3" />
+
         <PackageReference Include="Microsoft.Extensions.DiagnosticAdapter" Version="3.1.32" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+        <PackageReference Include="Scalar.AspNetCore" Version="1.1.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
         <PackageReference Include="StackExchange.Redis" Version="2.6.111" />
     </ItemGroup>
 
